# wcontainer

./: README_template.md  publish_version.py  pyproject.toml  requirements.txt  setup.py
enviroment/: Dockerfile  docker-compose.yaml
examples/: README.md
examples/1-basicos/: 1_list_container.py  2_start_new_container.py  3_new_resources.py
examples/2-intermedios/: 1_buscar_vulnerabilidades.py  2_read_metrics.py  3_informe de errores.py
examples/3-avanzados/: 1_ajuste_dinamico_recursos.py  2_escalar_contenedores_segun_uso_recursos.py  3_escalar_antes_desplegar.py  4_autonamizar_generacion_informe_errores.py  5_usar_ia_detectar_fallos_para_reinicio_automatico.py
examples/4-monitoreo_RT/: monitoreo_tiempo_real.py
wcontainer/: __init__.py
wcontainer/wcontainer/: __init__.py  controller.py
