[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "wcontainer"
version = "0.1.1"
authors = [
    { name = "wisrovi", email = "wisrovi.rodriguez@gmail.com" },
]
description = "Docker control with python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/wisrovi/wcontainer"
"Bug Tracker" = "https://github.com/wisrovi/wcontainer/issues"
